# guardrails-detectors

./: .gitignore  README.md  configure_guardrails.sh  install_guardrails.sh  pyproject.toml  requirements.txt  tox.ini
.agentready/: assessment-20260212-110049.json  assessment-latest.json  report-20260212-110049.html  report-20260212-110049.md  report-latest.html  report-latest.md
.github/actions/test-setup/: action.yaml
.github/workflows/: build-and-push-hf.yaml  build-and-push-judge.yaml  build-and-push.yaml  podman-build-dev-detectors.yml  podman-build-release-detectors.yaml  publish-package.yaml  python-code-format-check.yaml  run-tox-tests.yaml  security-scan.yaml  test-builtin-detectors.yaml  test-huggingface-runtime.yaml  test-llm-judge.yaml
.tekton/: README.md  odh-built-in-detector-pull-request.yaml  odh-built-in-detector-v3-2-push.yaml  odh-guardrails-detector-huggingface-runtime-pull-request.yaml  odh-guardrails-detector-huggingface-runtime-v3-2-push.yaml
detectors/: Dockerfile.builtIn  Dockerfile.embedding-classifier  Dockerfile.guardrails-ai  Dockerfile.hf  Dockerfile.hf.ppc64le  Dockerfile.judge  Dockerfile.konflux.builtIn  Dockerfile.konflux.hf  Dockerfile.pii-transformer  Dockerfile.regex  Dockerfile.xgb  build_guardrails_with_env.sh  pyproject.toml
detectors/built_in/: app.py  base_detector_registry.py  custom_detectors_wrapper.py  file_type_detectors.py  regex_detectors.py  requirements-dev.txt  requirements.in  requirements.txt
detectors/built_in/custom_detectors/: custom_detectors.py
detectors/common/: README.md  app.py  instrumented_detector.py  metrics.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scheme.py
detectors/common/src/guardrails_detector_common/: __init__.py
detectors/common/src/guardrails_detectors_common/: app.py
detectors/embedding_classification/: README.md  app.py  detector.py  requirements.txt  scheme.py
detectors/guardrails_ai_wrapper/: configure_guardrails.sh  detector.py  install_guardrails.sh  requirements.txt  scheme.py
detectors/huggingface/: README.md  app.py  detector.py  log_conf.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
detectors/huggingface/deploy/: isvc.yaml  model_container.yaml  servingruntime.yaml
detectors/huggingface/src/guardrails_detector_huggingface/: __init__.py  app.py  detector.py
detectors/huggingface/src/guardrails_detectors_huggingface/: app.py  scheme.py
detectors/llm_judge/: README.md  app.py  detector.py  requirements-dev.txt  requirements.in  requirements.txt  scheme.py
detectors/llm_judge/deploy/: isvc.yaml  servingruntime.yaml
detectors/pii_transformer/: app.py  detector.py  scheme.py
detectors/regex_match/: README.md  detector.py  scheme.py
detectors/regex_match/data/: sample.json
detectors/regex_match/deploy/: deploy.yaml
detectors/xgb/: README.md  requirements.txt
docs/: builtin_examples.md  custom_detectors.md  hf_examples.md  llm_judge_examples.md
llm_judge/: requirements.txt
src/guardrails_detectors/: Dockerfile.builtIn  Dockerfile.hf
src/guardrails_detectors/built_in/: app.py  base_detector_registry.py  file_type_detectors.py  regex_detectors.py  requirements.txt
src/guardrails_detectors/common/: requirements-dev.txt  requirements.txt  scheme.py
src/guardrails_detectors/huggingface/: app.py  detector.py  locustfile.py
src/guardrails_detectors/llm_judge/: README.md  app.py  detector.py  scheme.py
tests/: README.md  conftest.py  test_detector_device.py  test_detector_initalisation.py  test_detector_process.py
tests/detectors/builtIn/: test_custom.py  test_filetype.py  test_metrics.py  test_regex.py
tests/detectors/huggingface/: test_client_integration.py  test_method_get_probabilities.py  test_method_initalize_device.py  test_method_initialize_model.py  test_method_parse_output.py  test_method_process_causal_lm.py  test_method_process_sequence_classification.py  test_method_process_token_classification.py  test_method_run.py  test_metrics.py
tests/detectors/llm_judge/: test_llm_judge_detector.py  test_performance.py
tests/detectors/xgb/: test_xgb.py
tests/dummy_models/bert/BertForSequenceClassification/: config.json  model.safetensors  tf_model.h5
tests/dummy_models/bert/BertForTokenClassification/: config.json  model.safetensors  tf_model.h5
tests/dummy_models/bert/BertModel/: config.json  model.safetensors  tf_model.h5  tokenizer.json  tokenizer_config.json  vocab.txt
tests/dummy_models/gpt2/GPT2Model/: config.json  merges.txt  model.safetensors  tf_model.h5  tokenizer.json  tokenizer_config.json  vocab.json
