[project]
name = "guardrails-detector-huggingface"
version = "0.1.0"
description = "Huggingface detector implementation for guardrails"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    {name = "Mac Misiura", email = "mmisiura@redhat.com"},
    {name = "Rob Geada", email = "rgeada@redhat.com"},
    {name = "Rui Vieira", email = "rcardoso@redhat.com"},
    {name = "Sai Chandra", email = "spandraj@redhat.com"},
    {name = "TrustyAI team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["AI", "LLM", "Guardrails", "Responsible AI", "TrustyAI", "Huggingface", "Transformers"]
dependencies = [
    "guardrails-detector-common>=0.1.0",
    "transformers>=4.50.0",
    "torch>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/trustyai-explainability/guardrails-detectors"
Repository = "https://github.com/trustyai-explainability/guardrails-detectors.git"
Issues = "https://github.com/trustyai-explainability/guardrails-detectors/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardrails_detector_huggingface"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]
